# etl_with_dagster

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  jobs.py  main.py  pyproject.toml
.github/workflows/: codeql.yml
etl_pipeline/: __init__.py  __main__.py  jobs.py
tests/: test_etl_pipeline.py  test_jobs.py
