[project]
name = "etl-with-dagster"
version = "0.1.0"
description = "ETL pipeline with Dagster"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.11.2",
    "dagster-webserver>=1.11.2",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.9.2",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
    "ssort>=0.15.0",
]
