# Documentation: pyproject.toml for ETL Dagster Project
# Manages dependencies and project metadata using Poetry
[tool.poetry]
name = "etl_with_dagster"
version = "0.1.0"
description = "ETL pipeline using Dagster, with observability and robust dependency management."
authors = ["Austin"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<=3.13.3"
dagster = "^1.11.2"
dagster-webserver = "^1.11.2"
sqlalchemy = "^2.0.41"
requests = "^2.32.4"
psycopg2-binary = "^2.9.10"
faker = "^37.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
black = "^24.10.0"
isort = "^5.13.2"
ssort = "^0.13.0"
pytest = "8.3.1"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
coverage = "7.6.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
skip-string-normalization = true

[tool.ruff]
line-length = 150 
indent-width = 4
target-version = "py39"
#select = ["E", "F", "B", "I"]
ignore = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
extend-select = [
    # "D",     # pydocstyle
    "E501",  # enforce line length
    # "UP",    # pyupgrade
]
ignore = [
    "E722", # Do not use bare `except`
    "E402", 
    "F841", 
    "E711", 
    "E721", 
    "E712",
    "E501",
    "F811",
    "F601"
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["dal"]

[tool.ssort]
# Enable grouping imports
group_imports = true

[tool.coverage.report]
fail_under = 20
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "tests -vv --cov --cov-config .coveragerc"

[tool.dagster]
module_name = "jobs"